Added simple intro loader and audio

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@react-three/drei": "^9.57.0",
     "@react-three/fiber": "^8.11.5",
     "@react-three/postprocessing": "^2.7.0",
+    "@theatre/core": "^0.6.0",
+    "@theatre/r3f": "^0.6.0",
+    "@theatre/studio": "^0.6.0",
     "@types/three": "^0.149.0",
     "leva": "^0.9.34",
     "react": "^18.2.0",
