GPGPU particles loaded

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@theatre/r3f": "^0.6.0",
     "@theatre/studio": "^0.6.0",
     "@types/three": "^0.149.0",
+    "babel-plugin-glsl": "^1.0.0",
+    "babel-plugin-macros": "^3.1.0",
     "leva": "^0.9.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
