--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-glsl": "^1.0.0",
     "babel-plugin-macros": "^3.1.0",
     "leva": "^0.9.34",
+    "meshline": "^3.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
