--- a/package.json
+++ b/package.json
@@ -17,21 +17,23 @@
     "@types/three": "^0.149.0",
     "babel-plugin-glsl": "^1.0.0",
     "babel-plugin-macros": "^3.1.0",
+    "framer-motion": "^10.10.0",
     "meshline": "^3.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-spring": "^9.7.1",
+    "styled-components": "^5.3.9",
     "three": "^0.150.1",
     "use-gesture": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@theatre/studio": "^0.6.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "leva": "^0.9.34",
     "prettier": "2.8.4",
     "r3f-perf": "^7.1.2",
-    "vite": "^4.1.0",
-    "leva": "^0.9.34",
-    "@theatre/studio": "^0.6.0"
+    "vite": "^4.1.0"
   }
 }
