--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-spring": "^9.7.1",
     "three": "^0.150.1",
     "use-gesture": "^1.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@theatre/studio": "^0.6.0",
